<?xml version="1.0" encoding="utf-8"?>
<!--
/*
** Copyright (C) 2018, 2019 Vad Nik (http://github.com/vadniks). All rights reserved.
**
** This code is a part of proprietary software.
** Usage, distribution, redistribution, modifying 
** and/or commercial use of this code,
** without author's written permission, are strongly prohibited. 
*/
-->
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CreateActivity">

    <com.google.android.gms.ads.AdView
            android:layout_gravity="top|center_horizontal"
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/adUnitId">
    </com.google.android.gms.ads.AdView>

    <LinearLayout
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/gen_spin"/>

        <EditText
                android:layout_marginTop="8dp"
                android:inputType="text|textCapSentences|textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:hint="@string/message"
                android:id="@+id/gen_et"/>

        <ImageView
                android:id="@+id/gen_im"
                android:visibility="gone"
                android:layout_width="150dp"
                android:layout_height="150dp"
                tools:ignore="ContentDescription"/>

    </LinearLayout>

    <Button
            android:layout_gravity="bottom|center_horizontal"
            android:layout_margin="16dp"
            android:id="@+id/gen_bt"
            android:text="@string/generate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</android.support.design.widget.CoordinatorLayout>