<?xml version="1.0" encoding="utf-8"?>
<!--
/*
** Copyright (C) 2018, 2019 Vad Nik (http://github.com/vadniks). All rights reserved.
**
** This code is a part of proprietary software.
** Usage, distribution, redistribution, modifying 
** and/or commercial use of this code,
** without author's written permission, are strongly prohibited. 
*/
-->
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <SurfaceView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:id="@+id/scan_img"
            tools:ignore="ContentDescription"/>

    <com.google.android.gms.ads.AdView
            android:layout_gravity="top|center_horizontal"
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/adUnitId">
    </com.google.android.gms.ads.AdView>

    <Button
            android:layout_gravity="center_vertical|start"
            android:layout_margin="8dp"
            android:id="@+id/scan_nav"
            android:background="@android:drawable/ic_menu_gallery"
            android:layout_width="50dp"
            android:layout_height="50dp"/>

    <Button
            android:layout_gravity="center_vertical|end"
            android:layout_margin="16dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/scan_flash"
            android:background="@drawable/lightning"/>

    <LinearLayout
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content">

        <Button
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:id="@+id/scan_dn"
                android:text="@string/scan"/>

        <TextView
                android:layout_marginBottom="16dp"
                android:id="@+id/scan_upload"
                android:text="@string/upload_qr_code"
                android:textColor="@android:color/holo_blue_light"
                android:clickable="true"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"/>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>